# pkg/db/dao/model/task.gen.go
@@ -1,0 +1,26 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+const TableNameTask = "task"
+
+// Task mapped from table <task>
+type Task struct {
+	ID         int32  `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	ParentID   int32  `gorm:"column:parent_id;not null" json:"parent_id"`
+	Task       string `gorm:"column:task;not null" json:"task"`
+	Status     int32  `gorm:"column:status;not null" json:"status"`
+	Estimate   int32  `gorm:"column:estimate;not null" json:"estimate"`
+	Start      string `gorm:"column:start;default:CURRENT_TIMESTAMP" json:"start"`
+	End        string `gorm:"column:end;default:CURRENT_TIMESTAMP" json:"end"`
+	Desc       string `gorm:"column:desc;not null" json:"desc"`
+	Metadata   string `gorm:"column:metadata;not null" json:"metadata"`
+	CreateTime string `gorm:"column:create_time;default:CURRENT_TIMESTAMP" json:"create_time"`
+}
+
+// TableName Task's table name
+func (*Task) TableName() string {
+	return TableNameTask
+}
