# pkg/proto/api/taskService.gen.pb.go
@@ -1,0 +1,463 @@
+// Code generated by tools/genCURD. DO NOT EDIT.
+
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v6.31.0
+// source: taskService.gen.proto
+
+package api
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+// --------------------------------------------------
+// tbl : task
+type TaskInfo struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	ID            int32                  `protobuf:"varint,1,opt,name=iD,proto3" json:"iD,omitempty"`
+	ParentID      int32                  `protobuf:"varint,2,opt,name=parentID,proto3" json:"parentID,omitempty"`
+	Task          string                 `protobuf:"bytes,3,opt,name=task,proto3" json:"task,omitempty"`
+	Status        int32                  `protobuf:"varint,4,opt,name=status,proto3" json:"status,omitempty"`
+	Estimate      int32                  `protobuf:"varint,5,opt,name=estimate,proto3" json:"estimate,omitempty"`
+	Start         string                 `protobuf:"bytes,6,opt,name=start,proto3" json:"start,omitempty"`
+	End           string                 `protobuf:"bytes,7,opt,name=end,proto3" json:"end,omitempty"`
+	Desc          string                 `protobuf:"bytes,8,opt,name=desc,proto3" json:"desc,omitempty"`
+	Metadata      string                 `protobuf:"bytes,9,opt,name=metadata,proto3" json:"metadata,omitempty"`
+	CreateTime    string                 `protobuf:"bytes,10,opt,name=createTime,proto3" json:"createTime,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *TaskInfo) Reset() {
+	*x = TaskInfo{}
+	mi := &file_taskService_gen_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *TaskInfo) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*TaskInfo) ProtoMessage() {}
+
+func (x *TaskInfo) ProtoReflect() protoreflect.Message {
+	mi := &file_taskService_gen_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use TaskInfo.ProtoReflect.Descriptor instead.
+func (*TaskInfo) Descriptor() ([]byte, []int) {
+	return file_taskService_gen_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *TaskInfo) GetID() int32 {
+	if x != nil {
+		return x.ID
+	}
+	return 0
+}
+
+func (x *TaskInfo) GetParentID() int32 {
+	if x != nil {
+		return x.ParentID
+	}
+	return 0
+}
+
+func (x *TaskInfo) GetTask() string {
+	if x != nil {
+		return x.Task
+	}
+	return ""
+}
+
+func (x *TaskInfo) GetStatus() int32 {
+	if x != nil {
+		return x.Status
+	}
+	return 0
+}
+
+func (x *TaskInfo) GetEstimate() int32 {
+	if x != nil {
+		return x.Estimate
+	}
+	return 0
+}
+
+func (x *TaskInfo) GetStart() string {
+	if x != nil {
+		return x.Start
+	}
+	return ""
+}
+
+func (x *TaskInfo) GetEnd() string {
+	if x != nil {
+		return x.End
+	}
+	return ""
+}
+
+func (x *TaskInfo) GetDesc() string {
+	if x != nil {
+		return x.Desc
+	}
+	return ""
+}
+
+func (x *TaskInfo) GetMetadata() string {
+	if x != nil {
+		return x.Metadata
+	}
+	return ""
+}
+
+func (x *TaskInfo) GetCreateTime() string {
+	if x != nil {
+		return x.CreateTime
+	}
+	return ""
+}
+
+type AddTaskRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Task          *TaskInfo              `protobuf:"bytes,1,opt,name=task,proto3" json:"task,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *AddTaskRequest) Reset() {
+	*x = AddTaskRequest{}
+	mi := &file_taskService_gen_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *AddTaskRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AddTaskRequest) ProtoMessage() {}
+
+func (x *AddTaskRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_taskService_gen_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AddTaskRequest.ProtoReflect.Descriptor instead.
+func (*AddTaskRequest) Descriptor() ([]byte, []int) {
+	return file_taskService_gen_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *AddTaskRequest) GetTask() *TaskInfo {
+	if x != nil {
+		return x.Task
+	}
+	return nil
+}
+
+type AddTaskResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Task          *TaskInfo              `protobuf:"bytes,1,opt,name=task,proto3" json:"task,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *AddTaskResponse) Reset() {
+	*x = AddTaskResponse{}
+	mi := &file_taskService_gen_proto_msgTypes[2]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *AddTaskResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AddTaskResponse) ProtoMessage() {}
+
+func (x *AddTaskResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_taskService_gen_proto_msgTypes[2]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AddTaskResponse.ProtoReflect.Descriptor instead.
+func (*AddTaskResponse) Descriptor() ([]byte, []int) {
+	return file_taskService_gen_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *AddTaskResponse) GetTask() *TaskInfo {
+	if x != nil {
+		return x.Task
+	}
+	return nil
+}
+
+type GetTaskListRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	IDList        []int32                `protobuf:"varint,1,rep,packed,name=iDList,proto3" json:"iDList,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetTaskListRequest) Reset() {
+	*x = GetTaskListRequest{}
+	mi := &file_taskService_gen_proto_msgTypes[3]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetTaskListRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetTaskListRequest) ProtoMessage() {}
+
+func (x *GetTaskListRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_taskService_gen_proto_msgTypes[3]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetTaskListRequest.ProtoReflect.Descriptor instead.
+func (*GetTaskListRequest) Descriptor() ([]byte, []int) {
+	return file_taskService_gen_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *GetTaskListRequest) GetIDList() []int32 {
+	if x != nil {
+		return x.IDList
+	}
+	return nil
+}
+
+type GetTaskListResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	TaskList      []*TaskInfo            `protobuf:"bytes,1,rep,name=taskList,proto3" json:"taskList,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetTaskListResponse) Reset() {
+	*x = GetTaskListResponse{}
+	mi := &file_taskService_gen_proto_msgTypes[4]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetTaskListResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetTaskListResponse) ProtoMessage() {}
+
+func (x *GetTaskListResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_taskService_gen_proto_msgTypes[4]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetTaskListResponse.ProtoReflect.Descriptor instead.
+func (*GetTaskListResponse) Descriptor() ([]byte, []int) {
+	return file_taskService_gen_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *GetTaskListResponse) GetTaskList() []*TaskInfo {
+	if x != nil {
+		return x.TaskList
+	}
+	return nil
+}
+
+type DelTaskByIDListRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	IDList        []int32                `protobuf:"varint,1,rep,packed,name=iDList,proto3" json:"iDList,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *DelTaskByIDListRequest) Reset() {
+	*x = DelTaskByIDListRequest{}
+	mi := &file_taskService_gen_proto_msgTypes[5]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *DelTaskByIDListRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*DelTaskByIDListRequest) ProtoMessage() {}
+
+func (x *DelTaskByIDListRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_taskService_gen_proto_msgTypes[5]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use DelTaskByIDListRequest.ProtoReflect.Descriptor instead.
+func (*DelTaskByIDListRequest) Descriptor() ([]byte, []int) {
+	return file_taskService_gen_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *DelTaskByIDListRequest) GetIDList() []int32 {
+	if x != nil {
+		return x.IDList
+	}
+	return nil
+}
+
+var File_taskService_gen_proto protoreflect.FileDescriptor
+
+const file_taskService_gen_proto_rawDesc = "" +
+	"\n" +
+	"\x15taskService.gen.proto\x12\x03api\x1a\x1cgoogle/api/annotations.proto\x1a\fcommon.proto\"\xf6\x01\n" +
+	"\bTaskInfo\x12\x0e\n" +
+	"\x02iD\x18\x01 \x01(\x05R\x02iD\x12\x1a\n" +
+	"\bparentID\x18\x02 \x01(\x05R\bparentID\x12\x12\n" +
+	"\x04task\x18\x03 \x01(\tR\x04task\x12\x16\n" +
+	"\x06status\x18\x04 \x01(\x05R\x06status\x12\x1a\n" +
+	"\bestimate\x18\x05 \x01(\x05R\bestimate\x12\x14\n" +
+	"\x05start\x18\x06 \x01(\tR\x05start\x12\x10\n" +
+	"\x03end\x18\a \x01(\tR\x03end\x12\x12\n" +
+	"\x04desc\x18\b \x01(\tR\x04desc\x12\x1a\n" +
+	"\bmetadata\x18\t \x01(\tR\bmetadata\x12\x1e\n" +
+	"\n" +
+	"createTime\x18\n" +
+	" \x01(\tR\n" +
+	"createTime\"3\n" +
+	"\x0eAddTaskRequest\x12!\n" +
+	"\x04task\x18\x01 \x01(\v2\r.api.TaskInfoR\x04task\"4\n" +
+	"\x0fAddTaskResponse\x12!\n" +
+	"\x04task\x18\x01 \x01(\v2\r.api.TaskInfoR\x04task\",\n" +
+	"\x12GetTaskListRequest\x12\x16\n" +
+	"\x06iDList\x18\x01 \x03(\x05R\x06iDList\"@\n" +
+	"\x13GetTaskListResponse\x12)\n" +
+	"\btaskList\x18\x01 \x03(\v2\r.api.TaskInfoR\btaskList\"0\n" +
+	"\x16DelTaskByIDListRequest\x12\x16\n" +
+	"\x06iDList\x18\x01 \x03(\x05R\x06iDList2\xee\x01\n" +
+	"\btaskCURD\x12F\n" +
+	"\aAddTask\x12\x13.api.AddTaskRequest\x1a\x14.api.AddTaskResponse\"\x10\x82\xd3\xe4\x93\x02\n" +
+	":\x01*\"\x05/task\x12O\n" +
+	"\vGetTaskList\x12\x17.api.GetTaskListRequest\x1a\x18.api.GetTaskListResponse\"\r\x82\xd3\xe4\x93\x02\a\x12\x05/task\x12I\n" +
+	"\x0fDelTaskByIDList\x12\x1b.api.DelTaskByIDListRequest\x1a\n" +
+	".api.Empty\"\r\x82\xd3\xe4\x93\x02\a*\x05/taskB\rZ\vpgo/api;apib\x06proto3"
+
+var (
+	file_taskService_gen_proto_rawDescOnce sync.Once
+	file_taskService_gen_proto_rawDescData []byte
+)
+
+func file_taskService_gen_proto_rawDescGZIP() []byte {
+	file_taskService_gen_proto_rawDescOnce.Do(func() {
+		file_taskService_gen_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_taskService_gen_proto_rawDesc), len(file_taskService_gen_proto_rawDesc)))
+	})
+	return file_taskService_gen_proto_rawDescData
+}
+
+var file_taskService_gen_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_taskService_gen_proto_goTypes = []any{
+	(*TaskInfo)(nil),               // 0: api.TaskInfo
+	(*AddTaskRequest)(nil),         // 1: api.AddTaskRequest
+	(*AddTaskResponse)(nil),        // 2: api.AddTaskResponse
+	(*GetTaskListRequest)(nil),     // 3: api.GetTaskListRequest
+	(*GetTaskListResponse)(nil),    // 4: api.GetTaskListResponse
+	(*DelTaskByIDListRequest)(nil), // 5: api.DelTaskByIDListRequest
+	(*Empty)(nil),                  // 6: api.Empty
+}
+var file_taskService_gen_proto_depIdxs = []int32{
+	0, // 0: api.AddTaskRequest.task:type_name -> api.TaskInfo
+	0, // 1: api.AddTaskResponse.task:type_name -> api.TaskInfo
+	0, // 2: api.GetTaskListResponse.taskList:type_name -> api.TaskInfo
+	1, // 3: api.taskCURD.AddTask:input_type -> api.AddTaskRequest
+	3, // 4: api.taskCURD.GetTaskList:input_type -> api.GetTaskListRequest
+	5, // 5: api.taskCURD.DelTaskByIDList:input_type -> api.DelTaskByIDListRequest
+	2, // 6: api.taskCURD.AddTask:output_type -> api.AddTaskResponse
+	4, // 7: api.taskCURD.GetTaskList:output_type -> api.GetTaskListResponse
+	6, // 8: api.taskCURD.DelTaskByIDList:output_type -> api.Empty
+	6, // [6:9] is the sub-list for method output_type
+	3, // [3:6] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
+}
+
+func init() { file_taskService_gen_proto_init() }
+func file_taskService_gen_proto_init() {
+	if File_taskService_gen_proto != nil {
+		return
+	}
+	file_common_proto_init()
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_taskService_gen_proto_rawDesc), len(file_taskService_gen_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   6,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_taskService_gen_proto_goTypes,
+		DependencyIndexes: file_taskService_gen_proto_depIdxs,
+		MessageInfos:      file_taskService_gen_proto_msgTypes,
+	}.Build()
+	File_taskService_gen_proto = out.File
+	file_taskService_gen_proto_goTypes = nil
+	file_taskService_gen_proto_depIdxs = nil
+}
